bullet_ws/log/build_2025-10-20_11-19-11/sim/stderr.log
  File "/home/arepo/vsss_sim/bullet_ws/install/sim/lib/python3.10/site-packages/sim/gui.py", line 318
    self.call_controller(State.AUTO):
                                    ^
SyntaxError: invalid syntax

